--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 # Add your project's requirements here!
-git+https://github.com/Microsoft/ffmodel@v0.1.0
+git+https://github.com/Microsoft/ffmodel@v0.1.0#egg=ffmodel
+ipykernel
 seaborn
+fastapi
