adding chatbot notebook

--- a/solution/configs/03_with_fewshots_01.yaml
+++ b/solution/configs/03_with_fewshots_01.yaml
@@ -10,7 +10,7 @@ experimentation:
 
 inference:
   reader:
-    name: "components.readers.text_prompt"
+    name: "components.readers.jsonl"
   writers:
     - name: "components.writers.jsonl"
       args:
