--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@
 # Install dependencies
 FROM python:3.10-slim AS base
 
-# Install FFModel (and unpack secrets into environment first)
+# Install FFModel and other dependencies (and unpack secrets into environment first)
 RUN --mount=type=secret,id=ffmodelreposecrets \
     export $(grep -v '^#' /run/secrets/ffmodelreposecrets | tr -d '\r' | xargs -d '\n') \ 
     && apt-get -y update && apt-get install -y git --no-install-recommends && rm -rf /var/lib/apt/lists/* && \
@@ -15,7 +15,7 @@ WORKDIR /setup
 # Only copy and install requirements.txt if it exists in the context
 COPY endpoint/*requirements.txt .
 RUN if [ -f "requirements.txt" ]; then \
-    pip install -r requirements.txt; \
+    pip install --no-cache-dir -r requirements.txt; \
 fi
 
 # Run the app
@@ -24,4 +24,6 @@ FROM base AS app
 WORKDIR /app
 COPY . .
 
-ENTRYPOINT ["python", "endpoint/main.py"]
+WORKDIR /app/endpoint
+
+ENTRYPOINT ["uvicorn", "main:app", "--host", "0.0.0.0"]
