--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,4 +26,4 @@ COPY . .
 
 WORKDIR /app/endpoint
 
-ENTRYPOINT ["uvicorn", "main:app", "--host", "0.0.0.0"]
+ENTRYPOINT ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
