--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,10 +6,10 @@ services:
       dockerfile: docker/Dockerfile # Relative to build context
       secrets:
         - ffmodelreposecrets # Include our FFModel repository secrets during build
-    image: ghcr.io/joaquinrz/pizza-ai # Tag our image as 
+    image: ghcr.io/joaquinrz/pizza-api # Tag our image as 
     environment: # Set our FFModel config paths
-      SOLUTION_CONFIG_PATH: /app/solution/configs/05_with_fewshots_02_min.yaml
-      ENVIRONMENT_CONFIG_PATH: /app/.ffmodel
+      SOLUTION_CONFIG_PATH: ../solution/configs/05_with_fewshots_02_min.yaml
+      ENVIRONMENT_CONFIG_PATH: ../.ffmodel
     ports:
       - "8080:8000" # Expose our web endpoint
     volumes:
