updating solution configs and making notebook execute all configs

--- a/solution/configs/07_with_fewshots_02_and_static_context_01_min.yaml
+++ b/solution/configs/07_with_fewshots_02_and_static_context_01_min.yaml
@@ -25,6 +25,11 @@ components:
     supporting_data:
       static_context_file:
         file_path: "../solution/data/static_contexts/02_static_context.txt"
+
+  - name: "components.pre_processors.few_shots_from_file"
+    supporting_data:
+      few_shot_file:
+        file_path: "../solution/data/few_shot_pairs/02_few_shots.json"
   
   - name: "components.stitchers.openai_chat_completions"
 
